# app/docs/swagger.json
@@ -11,6 +11,31 @@
     },
     "basePath": "/",
     "paths": {
+        "/back": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "interact"
+                ],
+                "summary": "Navigate back",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.GotoResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrResp"
+                        }
+                    }
+                }
+            }
+        },
         "/batch": {
             "post": {
                 "consumes": [
@@ -39,6 +64,45 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/server.BatchResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/check": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "interact"
+                ],
+                "summary": "Set a checkbox/radio to checked/unchecked",
+                "parameters": [
+                    {
+                        "description": "ref and desired checked state",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/server.CheckReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.OKResp"
                         }
                     },
                     "400": {
@@ -167,6 +231,31 @@
                 }
             }
         },
+        "/forward": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "interact"
+                ],
+                "summary": "Navigate forward",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.GotoResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrResp"
+                        }
+                    }
+                }
+            }
+        },
         "/goto": {
             "post": {
                 "consumes": [
@@ -195,6 +284,45 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/server.GotoResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/hover": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "interact"
+                ],
+                "summary": "Hover an element by ref",
+                "parameters": [
+                    {
+                        "description": "ref",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/server.HoverReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.OKResp"
                         }
                     },
                     "400": {
@@ -239,6 +367,45 @@
                 }
             }
         },
+        "/press": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "interact"
+                ],
+                "summary": "Press a key or chord (Enter, Tab, ArrowDown, Control+a)",
+                "parameters": [
+                    {
+                        "description": "key",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/server.PressReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.OKResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrResp"
+                        }
+                    }
+                }
+            }
+        },
         "/read": {
             "get": {
                 "produces": [
@@ -264,6 +431,31 @@
                 }
             }
         },
+        "/reload": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "interact"
+                ],
+                "summary": "Reload the current page",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.GotoResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrResp"
+                        }
+                    }
+                }
+            }
+        },
         "/scan": {
             "get": {
                 "produces": [
@@ -282,6 +474,84 @@
                     },
                     "500": {
                         "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/scroll": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "interact"
+                ],
+                "summary": "Scroll the page (dir+amount) or an element into view (ref)",
+                "parameters": [
+                    {
+                        "description": "ref or dir+amount",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/server.ScrollReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.OKResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/select": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "interact"
+                ],
+                "summary": "Select dropdown option(s) by visible text",
+                "parameters": [
+                    {
+                        "description": "ref and values",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/server.SelectReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.OKResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/server.ErrResp"
                         }
@@ -385,6 +655,45 @@
                 }
             }
         },
+        "/type": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "interact"
+                ],
+                "summary": "Type text into the focused element",
+                "parameters": [
+                    {
+                        "description": "text",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/server.TypeReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.OKResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrResp"
+                        }
+                    }
+                }
+            }
+        },
         "/upload": {
             "post": {
                 "consumes": [
@@ -405,6 +714,45 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/server.UploadReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.OKResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/wait": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "interact"
+                ],
+                "summary": "Wait for a selector or text, or a fixed delay (ms)",
+                "parameters": [
+                    {
+                        "description": "selector|text|ms (+gone)",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/server.WaitReq"
                         }
                     }
                 ],
@@ -497,6 +845,19 @@
                         "type": "object",
                         "additionalProperties": {}
                     }
+                }
+            }
+        },
+        "server.CheckReq": {
+            "type": "object",
+            "properties": {
+                "checked": {
+                    "type": "boolean",
+                    "example": true
+                },
+                "ref": {
+                    "type": "string",
+                    "example": "e4"
                 }
             }
         },
@@ -597,11 +958,29 @@
                 }
             }
         },
+        "server.HoverReq": {
+            "type": "object",
+            "properties": {
+                "ref": {
+                    "type": "string",
+                    "example": "e1"
+                }
+            }
+        },
         "server.OKResp": {
             "type": "object",
             "properties": {
                 "ok": {
                     "type": "boolean"
+                }
+            }
+        },
+        "server.PressReq": {
+            "type": "object",
+            "properties": {
+                "key": {
+                    "type": "string",
+                    "example": "Enter"
                 }
             }
         },
@@ -630,6 +1009,36 @@
                 }
             }
         },
+        "server.ScrollReq": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "dir": {
+                    "type": "string",
+                    "example": "down"
+                },
+                "ref": {
+                    "type": "string"
+                }
+            }
+        },
+        "server.SelectReq": {
+            "type": "object",
+            "properties": {
+                "ref": {
+                    "type": "string",
+                    "example": "e3"
+                },
+                "values": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "server.StatusResp": {
             "type": "object",
             "properties": {
@@ -644,6 +1053,15 @@
                 }
             }
         },
+        "server.TypeReq": {
+            "type": "object",
+            "properties": {
+                "text": {
+                    "type": "string",
+                    "example": "hello"
+                }
+            }
+        },
         "server.UploadReq": {
             "type": "object",
             "properties": {
@@ -654,6 +1072,23 @@
                 "ref": {
                     "type": "string",
                     "example": "e5"
+                }
+            }
+        },
+        "server.WaitReq": {
+            "type": "object",
+            "properties": {
+                "gone": {
+                    "type": "boolean"
+                },
+                "ms": {
+                    "type": "integer"
+                },
+                "selector": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
                 }
             }
         }
